style.css
@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300&family=Lobster&display=swap');

:root{
    --bg-primary: #0f0f0f;
    --bg-secondary: #141414;
    --main-color: #f84113;
}

body{
    padding: 0;
    margin: 0;
    color: #ffffff;
    background-color: var(--bg-secondary);
    font-family: 'Dosis', sans-serif;
    min-height: 100vh;
}

.header{
    display: flex;
    justify-content: center;
    font-family: 'Lobster', cursive;
    background-color: var(--bg-primary);
    margin-bottom: 1rem;
}

.main{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
    gap: 1rem;
    width: 80%;
}

.card-container{
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: 0.25rem;
    text-decoration: none;
    color: #ffffff;
    background-color: var(--bg-primary);
    border-color: #000000;
    border-width: 0.25rem;
    border-style: solid;
    border-radius: 1rem;
    box-shadow: -0.25rem 0.5px 5px black;
}

.card-title{
    font-family: 'Lobster', cursive;
    font-size: 1.5rem;
}
.card-description{
    margin: 0;
    margin-bottom: 1rem;

}

.card-container:hover{
    background-color: #181818;
    border-color: var(--main-color);
    box-shadow: -0.25rem 0.5px 10px black;
}

.title{
    font-size: 2.5rem;
    font-family: 'Lobster', cursive;
    margin: 1.5rem;
    text-decoration: none;
    color: #ffffff;
}

.title:hover{
    color: var(--main-color);
}

main{
    display: flex;
    justify-content: center;
}

